--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Animes | MSadi</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="android-chrome-512x512.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
       <a href="#" class="logo">Quiz.</a>
       <nav class="navbar">
         <a href="#" class="active">Página Inicial</a>
-      <a href="#">Sobre Nós</a>
+      <a href="about.html">Sobre Nós</a>
       <a href="#">Serviço</a>
       <a href="#">Contacto</a>
       </nav>
